sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:14: error: reassignment to val
      i = bleu+1;
        ^DutchFlagAlgo:20: error: reassignment to val
          i = lgr-rouge-1;
            ^DutchFlagAlgo:25: error: reassignment to val
        i = bleu+blanc+1;
          ^